# telegram-confluence-bot

./: .env.example  .gitignore  main.py  pyproject.toml  test.ipynb  test_rag.py
data/taxonomies/: cj_source_BI_BI.md  cj_source_CALLTOUCH_Calltouch.md  cj_source_ECOMM_E-Commerce.md  cj_source_TM_tag-manager.md  cj_source_cm_cm.md  cp_customer_profiles.md
